# rust-cli-pomodoro

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
resources/test/: mock_configuration.json  mock_credential.json
src/: archived_notification.rs  argument.rs  autocomplete.rs  configuration.rs  database.rs  error.rs  input_handler.rs  ipc.rs  line_handler.rs  line_handling.rs  logging.rs  main.rs  message.rs  notification.rs  notify.rs  report.rs
src/command/: action.rs  application.rs  command.rs  mod.rs  output.rs  util.rs
src/command/handler/: mod.rs  uds_client.rs  user_input.rs
src/notification/: archived_notification.rs  mod.rs  notification.rs  notify.rs
