[package]
name = "rust-cli-pomodoro"
version = "1.3.1"
authors = ["24seconds <24crazyoung@gmail.com>"]
edition = "2021"
rust-version = "1.59"
description = """
rust-cli-pomodoro manages your time!
"""
homepage = "https://github.com/24seconds/rust-cli-pomodoro"
repository = "https://github.com/24seconds/rust-cli-pomodoro"
readme = "README.md"
keywords = ["pomodoro", "notification", "terminal-app"]
categories = ["command-line-utilities"]
license = "Beerware"
exclude = ["/assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "time", "sync"] }
clap = "4.0.8"
chrono = "0.4.22"
chrono-tz=  "0.6.3"
gluesql = { git = "https://github.com/gluesql/gluesql", branch = "main", default-features = false, features = ["memory-storage"] }
notify-rust = "4.5.10"
log = "0.4.17"
env_logger = "0.9.1"
tabled = { version = "0.8.0", features = ["color"]}
serde_json = "1.0.85"
serde = "1.0.148"
reqwest = { version = "0.11", features = ["json"] }
colored = "2"
bincode = { version = "2.0.0-rc.1", features = ["alloc"]}

[[bin]]
name = "pomodoro"
path = "src/main.rs"
